Ensure long string should be wrap in alertify dialogs. Fixes #3695

--- a/web/pgadmin/static/scss/_alertify.overrides.scss
+++ b/web/pgadmin/static/scss/_alertify.overrides.scss
@@ -60,6 +60,8 @@
   }
   .ajs-body .ajs-content {
     bottom: $footer-height-calc !important;
+    word-break: break-word;
+    word-wrap: break-word;
   }
 
   /* Removes padding from alertify footer */
